fix: Radio toggle alignment

--- a/client/src/components/Utils/Radio/Radio.module.scss
+++ b/client/src/components/Utils/Radio/Radio.module.scss
@@ -5,6 +5,8 @@
     width: 30px;
     height: 17px;
     cursor: pointer;
+    left: 3px;
+    vertical-align: middle;
   }
 
   .radioDisabled {
